--- a/src/views/StudentForm.fxml
+++ b/src/views/StudentForm.fxml
@@ -163,5 +163,20 @@
             <Image url="@../assests/icons8-add-50.png" />
          </image>
       </ImageView>
+      <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="57.0" layoutY="357.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assests/icons8-card-payment-24.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="57.0" layoutY="907.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assests/icons8-address-30.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="27.0" fitWidth="35.0" layoutX="55.0" layoutY="828.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assests/icons8-age-50.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
