--- a/src/views/DashBoardForm.fxml
+++ b/src/views/DashBoardForm.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="dashBoardContext" prefHeight="1000.0" prefWidth="1900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashBoardFormController">
+<AnchorPane fx:id="dashBoardContext" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashBoardFormController">
    <children>
       <AnchorPane layoutX="389.0" layoutY="14.0" prefHeight="548.0" prefWidth="1494.0" style="-fx-background-color: #000059;">
          <children>
